# pirate-cities

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/pirate_cities/: city.py  config.py  main.py  point2d.py  resource.py  ship.py  simulation.py
tests/: test_city.py  test_ship.py  test_ship_itinerary.py
